--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,6 @@
 
     <!-- CSS link -->
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="style.css">
 
     <!-- font icon link-->
@@ -21,7 +20,7 @@
         <nav>
             <div class="login-navbar">
                 <div class="left-nav">
-                    <a href="index.html" class="logo" style="text-align: center;">Coding<span>Hints</span></a>
+                    <a href="index.html" class="logo">Coding<span>Hints</span></a>
                 </div>
             </div>
         </nav>
@@ -32,13 +31,13 @@
             <div class="sign-col-1">
                 <h3>Continue with</h3>
                 <div class="sign-link">
-                    <a href="" class="link-box"><img src="image/google.png" alt=""> Google</a>
+                    <a href="#" class="link-box"><img src="image/google.png" alt=""> Google</a>
 
-                    <a href="" class="link-box"><img src="image/facebook.png" alt=""> Facebook</a>
+                    <a href="#" class="link-box"><img src="image/facebook.png" alt=""> Facebook</a>
 
-                    <a href="" class="link-box"><img src="image/github.png" alt=""> Github</a>
+                    <a href="#" class="link-box"><img src="image/github.png" alt=""> Github</a>
 
-                    <a href="" class="link-box"><img src="image/linkedin.png" alt=""> Linkedin</a>
+                    <a href="#" class="link-box"><img src="image/linkedin.png" alt=""> Linkedin</a>
                 </div>
             </div>
             <div class="mid-line"></div>
