--- a/login.html
+++ b/login.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up - CodingHints</title>
+    <title>Login - CodingHints</title>
 
     <!-- CSS link -->
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="style.css">
 
     <!-- font icon link-->
@@ -32,13 +31,13 @@
             <div class="sign-col-1">
                 <h3>Continue with</h3>
                 <div class="sign-link">
-                    <a href="" class="link-box"><img src="image/google.png" alt=""> Google</a>
+                    <a href="#" class="link-box"><img src="image/google.png" alt=""> Google</a>
 
-                    <a href="" class="link-box"><img src="image/facebook.png" alt=""> Facebook</a>
+                    <a href="#" class="link-box"><img src="image/facebook.png" alt=""> Facebook</a>
 
-                    <a href="" class="link-box"><img src="image/github.png" alt=""> Github</a>
+                    <a href="#" class="link-box"><img src="image/github.png" alt=""> Github</a>
 
-                    <a href="" class="link-box"><img src="image/linkedin.png" alt=""> Linkedin</a>
+                    <a href="#" class="link-box"><img src="image/linkedin.png" alt=""> Linkedin</a>
                 </div>
             </div>
             <div class="mid-line"></div>
