--- a/user-profile.html
+++ b/user-profile.html
@@ -9,7 +9,6 @@
 
     <!-- css link -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/profile.css">
     <link rel="stylesheet" href="responsive.css">
 
     <!-- font icon link-->
@@ -48,11 +47,11 @@
     </header>
     <nav class="below-nav">
         <ul>
-            <li><a href=""><i class="fa-regular fa-newspaper mn-icon"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-            <li><a href=""><i class="fa-regular fa-compass mn-icon"></i></a></li>
-            <li><a href=""><i class="fa-solid fa-blog mn-icon"></i></a></li>
-            <li><a href=""><i class="fa-regular fa-bell"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-newspaper mn-icon"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-compass mn-icon"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-blog mn-icon"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
         </ul>
     </nav>
 
@@ -61,27 +60,27 @@
             <aside>
                 <div class="home-left">
                     <ul class="menu">
-                        <li><a href="" class="active"><i class="fa-regular fa-newspaper mn-icon"></i> Feed</a></li>
-                        <li><a href=""><i class="fa-regular fa-compass mn-icon"></i> Explore</a></li>
-                        <li><a href=""><i class="fa-solid fa-blog mn-icon"></i> Official Blog</a></li>
-                        <li><a href=""><i class="fa-solid fa-circle-info mn-icon"></i> About Us</a></li>
-                        <li><a href=""><i class="fa-regular fa-circle-question"></i></i> Support</a></li>
-                        <li><a href=""><i class="fa-solid fa-lock mn-icon"></i> Privacy Policy</a></li>
-                        <li><a href=""><i class="fa-solid fa-clipboard-list mn-icon"></i> Terms of Use</a></li>
+                        <li><a href="index.html"><i class="fa-regular fa-newspaper mn-icon"></i> Feed</a></li>
+                        <li><a href="#"><i class="fa-regular fa-compass mn-icon"></i> Explore</a></li>
+                        <li><a href="#"><i class="fa-solid fa-blog mn-icon"></i> Official Blog</a></li>
+                        <li><a href="#"><i class="fa-solid fa-circle-info mn-icon"></i> About Us</a></li>
+                        <li><a href="#"><i class="fa-regular fa-circle-question"></i></i> Support</a></li>
+                        <li><a href="#"><i class="fa-solid fa-lock mn-icon"></i> Privacy Policy</a></li>
+                        <li><a href="#"><i class="fa-solid fa-clipboard-list mn-icon"></i> Terms of Use</a></li>
                     </ul>
                     <div class="side-end">
                         <div class="social-link">
                             <div class="fb s-link">
-                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
                             </div>
                             <div class="fb s-link">
-                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                             </div>
                             <div class="fb s-link">
-                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             </div>
                             <div class="fb s-link">
-                                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                             </div>
                         </div>
                         <div class="ft-end">
@@ -117,9 +116,9 @@
                     <p><i class="fa-solid fa-calendar-days"></i> Joined on Nov 20, 2022</p>
                 </div>
                 <div class="social-links">
-                    <span><a href=""><i class="fa-brands fa-github"></i></a></span>
-                    <span><a href=""><i class="fa-brands fa-linkedin"></i></a></span>
-                    <span><a href=""><i class="fa-brands fa-twitter"></i></a></span>
+                    <span><a href="#"><i class="fa-brands fa-github"></i></a></span>
+                    <span><a href="#"><i class="fa-brands fa-linkedin"></i></a></span>
+                    <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
                 </div>
             </div>
         </div>
